--- a/localisation/replace/phi_replace_l_japanese.yml
+++ b/localisation/replace/phi_replace_l_japanese.yml
@@ -172,3 +172,5 @@ tr_synchronicity_machine_finish_desc:3 "§HUnlocks Edict:§! $edict_industrial_m
 war_goal_wg_conquest_desc:1 "War is waged to seize Claimed enemy systems. Using this wargoal to take claims generates §Y25%§! less §YThreat§! for each conquered system.\n$OUR_CLAIMS_ON_ENEMYS$\n$ALLY_CLAIMS_ON_ENEMYS$"
 
 origin_tooltip_imperial_vassal_effects:1 "§G- WARNING: Easy Origin for new players.§!\n- Start as the vassal of an §HAdvanced AI Empire§!.\n- Gain the option to choose a §HSpecialist Empire§! vassal type at the start of the game."
+
+void_dweller_trait_tooltip:0 £人工のない世界での人口の幸福感: §R-30%§!\n人口の統治者と専門家の使用が§G少なく§!なり、 §Y帝国 §!のサイズと人口の住居が §!
