--- a/localisation/braz_por/phi_l_braz_por.yml
+++ b/localisation/braz_por/phi_l_braz_por.yml
@@ -1081,3 +1081,35 @@ councilor_corporate_dominion_2_desc:0 "$councilor_corporate_dominion_desc$"
 councilor_franchise_state:0 "franchises ruler"
 councilor_franchise_state_female:0 "franchises ruler"
 councilor_franchise_state_desc:0 "franchises ruler talk with other franchise"
+
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE_TITLE:0 "Estude Artefatos Menores!"
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE:0 "Os Artefatos Menores podem ser estudados para obter uma Visão do Portal-L!"
+
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE_TITLE:0 "Estude Artefatos Menores!"
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE:0 "Os Artefatos Menores podem ser estudados para obter uma Visão dos Antecessores!"
+
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_TITLE:0 "Um império tenta sobreviver"
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_ALERT_MESSAGE:0 "Um império $EMPIRE|Y$ está tentando sobreviver em uma guerra desigual. Você poderia ajudá-lo §Ymelhorando a relação§! e clicando no édito §Y$edict_phi_join_defensive_war$§!"
+
+sm_nebula_alloy_refinery:0 "Refinaria de ligas"
+sm_nebula_alloy_refinery_desc:0 "Refinaria de ligas de alta tecnologia em gravidade 0"
+sm_civilian_anchorage:0 "Porto civil"
+sm_civilian_anchorage_desc:0 "Portos civis, também conhecidos como portos espaciais."
+sm_civilian_shipyard:0 "Estaleiro civil"
+sm_civilian_shipyard_desc:0 "Produz naves de venda de energia para as populações moradoras do vácuo. Para cada estaleiro civil a menos, mais energia é produzida. Para construir uma nave civil, é necessário 0,5 estaleiros, e para construir uma nave militar, 2 estaleiros são necessários."
+
+sm_starm_science_hub:0 "Centro de Pesquisa"
+sm_starm_science_hub_desc:0 "Uma instalação de alta tecnologia onde nossos cientistas se reúnem para avançar em diversos campos de pesquisa.\n"
+sm_starm_science_booster:0 "Laboratórios"
+sm_starm_science_booster_desc:0 "Instalações de ponta que fornecem condições controladas nas quais experimentos de alto risco são realizados longe de olhares curiosos.\n"
+sm_starm_science_booster_effect:0 "Produção de pesquisa £society£ £physics£ £engineering£ §Y$RESEARCH$§! a partir dos Centros de Ciência: §G+2§!.\n"
+sm_starm_culture_booster:0 "Embaixada"
+sm_starm_culture_booster_desc:0 "Este majestoso complexo pode hospedar desde pequenas reuniões clandestinas até grandes eventos públicos, exposições de arte e conferências diplomáticas.\n"
+sm_starm_culture_booster_effect:0 "Produção de pesquisa £unity£Unidade e £society£sociedade a partir dos Módulos de Base Estelar: §G+2§!.\n"
+sm_starm_culture_hub:0 "Centro Cultural"
+sm_starm_culture_hub_desc:0 "Uma magnífica instalação onde nossas mentes mais criativas se encontram para promover a cultura e as artes.\n"
+sm_art_college_effect:0 "Produção de pesquisa £unity£10 Unidade e £society£10 Sociedade a partir dos Centros Culturais: §G+2§!.\n"
+sm_curator_think_tank_effect:0 "Pesquisa em sociedade, engenharia e física em Hubs de Ciência: §G+2§!.\n"
+sm_Governmental_Orbital_Exchange_Market: "Mercado de Trocas Orbitais"
+sm_administrative_hub:0 "$building_low_tech_admin_hub$ Orbital"
+sm_Governmental_diplomatic_asset:0 "Embaixada Diplomática"
