--- a/localisation/french/phi_l_french.yml
+++ b/localisation/french/phi_l_french.yml
@@ -1094,3 +1094,35 @@ councilor_corporate_dominion_2_desc:0 "$councilor_corporate_dominion_desc$"
 councilor_franchise_state:0 "franchises ruler"
 councilor_franchise_state_female:0 "franchises ruler"
 councilor_franchise_state_desc:0 "franchises ruler talk with other franchise"
+
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE_TITLE:0 "Les Artéfacts Mineurs peuvent être étudiés !"
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE:0 "Les Artéfacts Mineurs peuvent être étudiés afin d'obtenir une Vision de Portail-L !"
+
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE_TITLE:0 "Les Artéfacts Mineurs peuvent être étudiés !"
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE:0 "Les Artéfacts Mineurs peuvent être étudiés afin d'obtenir une Vision des Précurseurs !"
+
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_TITLE:0 "Un empire tente de survivre"
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_ALERT_MESSAGE:0 "Un empire $EMPIRE|Y$ tente de survivre dans une guerre inégale. Pourriez-vous l'aider en §Yaméliorant la relation§ ! et en cliquant sur l'édit §Y$edict_phi_join_defensive_war$§ !"
+
+sm_nebula_alloy_refinery:0 "Raffinerie d'alliages"
+sm_nebula_alloy_refinery_desc:0 "Raffinerie d'alliages de haute technologie en gravité 0"
+sm_civilian_anchorage:0 "Ancre civile"
+sm_civilian_anchorage_desc:0 "Ancres civiles, également connues sous le nom de ports spatiaux."
+sm_civilian_shipyard:0 "Chantier naval civil"
+sm_civilian_shipyard_desc:0 "Produit des navires de vente d'énergie pour les populations de l'habitant du vide. Plus il y a de chantiers navals civils, moins il y a d'énergie produite. Il faut 0,5 chantiers pour construire un navire civil et 2 chantiers pour construire un navire militaire."
+
+sm_starm_science_hub:0 "Centre de recherche"
+sm_starm_science_hub_desc:0 "Un établissement de haute technologie où nos scientifiques se réunissent pour faire avancer différents domaines de recherche.\n"
+sm_starm_science_booster:0 "Laboratoires"
+sm_starm_science_booster_desc:0 "Des installations de pointe qui offrent des conditions contrôlées dans lesquelles des expériences à haut risque sont effectuées à l'abri des regards indiscrets.\n"
+sm_starm_science_booster_effect:0 "Production de recherche £society£ £physics£ £engineering£ §Y$RECHERCHE$§! depuis les centres de science : §G+2§!.\n"
+sm_starm_culture_booster:0 "Ambassade"
+sm_starm_culture_booster_desc:0 "Ce complexe majestueux peut accueillir des réunions clandestines de petite taille ainsi que des événements publics de grande envergure, des expositions d'art et des conférences diplomatiques.\n"
+sm_starm_culture_booster_effect:0 "Production de recherche £unity£Unité et £society£Société à partir des modules de base stellaire : §G+2§!.\n"
+sm_starm_culture_hub:0 "Centre culturel"
+sm_starm_culture_hub_desc:0 "Une magnifique installation où nos esprits les plus créatifs se rencontrent pour promouvoir la culture et les arts.\n"
+sm_art_college_effect:0 "Production de recherche £unity£10 Unité et £society£10 Société à partir des centres culturels : §G+2§!.\n"
+sm_curator_think_tank_effect:0 "Recherche en société, ingénierie et physique à partir des hubs scientifiques : §G+2§!.\n"
+sm_Governmental_Orbital_Exchange_Market: "Marché des échanges orbitaux"
+sm_administrative_hub:0 "$building_low_tech_admin_hub$ Orbital"
+sm_Governmental_diplomatic_asset:0 "Ambassade diplomatique"
