--- a/localisation/german/phi_l_german.yml
+++ b/localisation/german/phi_l_german.yml
@@ -1093,3 +1093,35 @@ councilor_corporate_dominion_2_desc:0 "$councilor_corporate_dominion_desc$"
 councilor_franchise_state:0 "franchises ruler"
 councilor_franchise_state_female:0 "franchises ruler"
 councilor_franchise_state_desc:0 "franchises ruler talk with other franchise"
+
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE_TITLE:0 "Kleine Artefakte können untersucht werden!"
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE:0 "Kleine Artefakte können untersucht werden, um ein L-Gate-Verständnis zu erlangen!"
+
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE_TITLE:0 "Kleine Artefakte können untersucht werden!"
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE:0 "Kleine Artefakte können untersucht werden, um ein Vorläufer-Verständnis zu erlangen!"
+
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_TITLE:0 "Ein Imperium versucht zu überleben"
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_ALERT_MESSAGE:0 "Ein Imperium $EMPIRE|Y$ versucht in einem ungleichen Krieg zu überleben. Könnten Sie ihm helfen, indem Sie die Beziehung §Yverbessern§! und auf das Edikt §Y$edict_phi_join_defensive_war$§ klicken!"
+
+sm_nebula_alloy_refinery:0 "Legierungsräffinerie"
+sm_nebula_alloy_refinery_desc:0 "Hochtechnologie-Legierungsräffinerie bei 0 Schwerkraft"
+sm_civilian_anchorage:0 "Zivile Verankerung"
+sm_civilian_anchorage_desc:0 "Zivile Verankerungen, auch als Raumhäfen bekannt."
+sm_civilian_shipyard:0 "Zivile Schiffswerft"
+sm_civilian_shipyard_desc:0 "Produziert Energieverkaufsschiffe für Bevölkerungen von Void Dwellers. Je mehr zivile Schiffswerften, desto weniger Energie wird produziert. Es werden 0,5 Schiffswerften benötigt, um ein ziviles Schiff zu bauen, und 2 Schiffswerften, um ein Militärschiff zu bauen."
+
+sm_starm_science_hub:0 "Forschungszentrum"
+sm_starm_science_hub_desc:0 "Eine High-Tech-Einrichtung, in der sich unsere Wissenschaftler treffen, um verschiedene Forschungsbereiche voranzutreiben.\n"
+sm_starm_science_booster:0 "Laboratorien"
+sm_starm_science_booster_desc:0 "Cutting-Edge-Einrichtungen, die kontrollierte Bedingungen bieten, in denen Hochrisiko-Experimente fernab neugieriger Blicke durchgeführt werden.\n"
+sm_starm_science_booster_effect:0 "£society£ £physics£ £engineering£ §Y$FORSCHUNG$§! aus Forschungszentren: §G+2§!.\n"
+sm_starm_culture_booster:0 "Botschaft"
+sm_starm_culture_booster_desc:0 "Dieses majestätische Gebäude kann alles von kleinen geheimen Treffen bis hin zu großen öffentlichen Veranstaltungen, Kunstausstellungen und diplomatischen Konferenzen beherbergen.\n"
+sm_starm_culture_booster_effect:0 "Produktion von £unity£Einheit und £society£Gesellschaftsforschung aus Sternenbasis-Modulen: §G+2§!.\n"
+sm_starm_culture_hub:0 "Kulturzentrum"
+sm_starm_culture_hub_desc:0 "Eine großartige Einrichtung, in der sich unsere kreativsten Köpfe treffen, um Kultur und Kunst zu fördern.\n"
+sm_art_college_effect:0 "Produktion von £unity£10 Einheit und £society£10 Gesellschaftsforschung aus Kulturzentren: §G+2§!.\n"
+sm_curator_think_tank_effect:0 "Gesellschafts-, Ingenieur- und Physikforschung aus Wissenschaftszentren: §G+2§!.\n"
+sm_Governmental_Orbital_Exchange_Market: "Orbitaler Austauschmarkt"
+sm_administrative_hub:0 "$building_low_tech_admin_hub$ Orbital"
+sm_Governmental_diplomatic_asset:0 "Diplomatische Botschaft"
