--- a/localisation/italian/phi_l_italian.yml
+++ b/localisation/italian/phi_l_italian.yml
@@ -1100,3 +1100,25 @@ MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE:0 "Gli artefatti minori possono essere st
 PHI_EMPIRE_IN_SURVIVE_AVAIBLE_TITLE:0 "Un impero cerca di sopravvivere"
 PHI_EMPIRE_IN_SURVIVE_AVAIBLE_ALERT_MESSAGE:0 "Un impero  $target|Y$ sta cercando di sopravvivere in una guerra impari, potresti aiutarlo prima §Ymigliorando le relazioni§! e poi cliccando sull'editto §Y$edict_phi_join_defensive_war$§!"
 
+sm_nebula_alloy_refinery:0 "Raffineria di leghe"
+sm_nebula_alloy_refinery_desc:0 "Raffineria di leghe ad alta tecnologia a gravità 0"
+sm_civilian_anchorage:0 "Ancoraggio civile"
+sm_civilian_anchorage_desc:0 "Ancoraggi civili, noti anche come porti spaziali."
+sm_civilian_shipyard:0 "Cantiere navale civile"
+sm_civilian_shipyard_desc:0 "Produce navi vendendole in cambio di  energia per le popolazioni di Void Dwellers. Più sono i cantieri navali civili, meno energia viene prodotta. Sono necessari 0,5 cantieri navali per costruire una nave civile e 2 cantieri navali per costruire una nave militare."
+
+sm_starm_science_hub:0 "Centro di ricerca"
+sm_starm_science_hub_desc:0 "Una struttura ad alta tecnologia dove i nostri scienziati si incontrano per avanzare in diversi campi di ricerca.\n"
+sm_starm_science_booster:0 "Laboratori"
+sm_starm_science_booster_desc:0 "Installazioni all'avanguardia che offrono condizioni controllate in cui vengono eseguiti esperimenti ad alto rischio lontano da occhi indiscreti.\n"
+sm_starm_science_booster_effect:0 "Produzione di ricerca £society£ £physics£ £engineering£ §Y$RICERCA$§! dai centri di scienza: §G+2§!.\n"
+sm_starm_culture_booster:0 "Ambasciata"
+sm_starm_culture_booster_desc:0 "Questo maestoso complesso può ospitare qualsiasi cosa, dalle piccole riunioni clandestine a grandi eventi pubblici, mostre d'arte e conferenze diplomatiche.\n"
+sm_starm_culture_booster_effect:0 "Produzione di ricerca £unity£Unità e £society£Società dai moduli della base stellare: §G+2§!.\n"
+sm_starm_culture_hub:0 "Centro culturale"
+sm_starm_culture_hub_desc:0 "Una magnifica struttura dove le nostre menti più creative si incontrano per promuovere la cultura e le arti.\n"
+sm_art_college_effect:0 "Produzione di ricerca £unity£10 Unità e £society£10 Società dai centri culturali: §G+2§!.\n"
+sm_curator_think_tank_effect:0 "Ricerca sulla società, l'ingegneria e la fisica da Hub scientifici: §G+2§!.\n"
+sm_Governmental_Orbital_Exchange_Market: "Mercato di scambio orbitale"
+sm_administrative_hub:0 "$building_low_tech_admin_hub$ orbitale"
+sm_Governmental_diplomatic_asset:0 "Ambasciata diplomatica"
