--- a/localisation/japanese/phi_l_japanese.yml
+++ b/localisation/japanese/phi_l_japanese.yml
@@ -1091,3 +1091,33 @@ councilor_corporate_dominion_2_desc:0 "$councilor_corporate_dominion_desc$"
 councilor_franchise_state:0 "franchises ruler"
 councilor_franchise_state_female:0 "franchises ruler"
 councilor_franchise_state_desc:0 "franchises ruler talk with other franchise"
+
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE_TITLE:0 "小型アーティファクトの研究が可能です！"
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE:0 "L-ゲートの洞察を得るために、小型アーティファクトを研究することができます！MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE_TITLE:0 "小型アーティファクトの研究が可能です！"
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE:0 "先史遺産の洞察を得るために、小型アーティファクトを研究することができます！"
+
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_TITLE:0 "帝国が生き残るために戦う"
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_ALERT_MESSAGE:0 "平等でない戦争で帝国$EMPIRE|Y$が生き残ろうとしています。あなたは§Y関係を改善§!し、§Y$edict_phi_join_defensive_war$§の布告をクリックして助けることができます！"
+
+sm_nebula_alloy_refinery:0 "合金精製所"
+sm_nebula_alloy_refinery_desc:0 "重力0の高度な合金精製所"
+sm_civilian_anchorage:0 "民間航空交通施設"
+sm_civilian_anchorage_desc:0 "民間の船着場、または宇宙港としても知られています。"
+sm_civilian_shipyard:0 "民間造船所"
+sm_civilian_shipyard_desc:0 "ヴォイド・ドウェラーの人口にエネルギー販売船を生産します。民間造船所が多いほど、生産されるエネルギー量は少なくなります。艦艇を建造するには0.5の造船所が必要であり、軍艦を建造するには2つの造船所が必要です。"
+
+sm_starm_science_hub:0 "研究ハブ"
+sm_starm_science_hub_desc:0 "多様な研究分野を進めるために、科学者たちが集まるハイテク施設。\n"
+sm_starm_science_booster:0 "研究所"
+sm_starm_science_booster_desc:0 "高リスクの実験がのぞかれないように、制御された環境下で行われる先端施設。\n"
+sm_starm_science_booster_effect:0 "科学ハブからの£society£ £physics£ £engineering£ §Y$研究$§! の生産：§G+2§!。\n"
+sm_starm_culture_booster:0 "大使館"
+sm_starm_culture_booster_desc:0 "小規模な秘密の会議から大規模な公共イベント、芸術展示、外交会議まで、あらゆる種類のイベントを開催できる壮大な施設。\n"
+sm_starm_culture_booster_effect:0 "スターベースモジュールからの£unity£ユニティ& £society£社会研究生産：§G+2§!。\n"
+sm_starm_culture_hub:0 "文化ハブ"
+sm_starm_culture_hub_desc:0 "最も創造的な人々が文化と芸術を促進するために集まる壮大な施設。\n"
+sm_art_college_effect:0 "文化ハブからの£unity£10 ユニティ& £society£10 社会研究生産：§G+2§!。\n"
+sm_curator_think_tank_effect:0 "サイエンスハブからの社会、工学、物理学の研究：§G+2§!。\n"
+sm_Governmental_Orbital_Exchange_Market: "軌道交換市場"
+sm_administrative_hub:0 "$building_low_tech_admin_hub$ Orbital"
+sm_Governmental_diplomatic_asset:0 "外交使節団"
