--- a/localisation/korean/phi_l_korean.yml
+++ b/localisation/korean/phi_l_korean.yml
@@ -1092,3 +1092,35 @@ councilor_corporate_dominion_2_desc:0 "$councilor_corporate_dominion_desc$"
 councilor_franchise_state:0 "franchises ruler"
 councilor_franchise_state_female:0 "franchises ruler"
 councilor_franchise_state_desc:0 "franchises ruler talk with other franchise"
+
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE_TITLE:0 "소형 유물을 연구할 수 있습니다!"
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE:0 "L-게이트 인사이트를 얻기 위해 소형 유물을 연구할 수 있습니다!"
+
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE_TITLE:0 "소형 유물을 연구할 수 있습니다!"
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE:0 "선구자 인사이트를 얻기 위해 소형 유물을 연구할 수 있습니다!"
+
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_TITLE:0 "제국이 생존을 위해 싸웁니다"
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_ALERT_MESSAGE:0 "제국 $EMPIRE|Y$이(가) 부당한 전쟁에서 생존을 시도하고 있습니다. §Y관계를 향상시키고§! §Y$edict_phi_join_defensive_war$§ 규정을 클릭하여 도와주시겠습니까?"
+
+sm_nebula_alloy_refinery:0 "합금 제련소"
+sm_nebula_alloy_refinery_desc:0 "중력 0에서의 고급 합금 제련소"
+sm_civilian_anchorage:0 "민간 닻소"
+sm_civilian_anchorage_desc:0 "민간 닻소 또는 우주 항구로도 알려져 있습니다."
+sm_civilian_shipyard:0 "민간 조선소"
+sm_civilian_shipyard_desc:0 "Void Dwellers의 인구에게 에너지 판매 선박을 생산합니다. 민간 조선소가 많을수록 생산되는 에너지는 적어집니다. 0.5개의 조선소로 민간 선박을 건조하고, 군함을 건조하기 위해서는 2개의 조선소가 필요합니다."
+
+sm_starm_science_hub:0 "연구 허브"
+sm_starm_science_hub_desc:0 "다양한 연구 분야를 발전시키기 위해 과학자들이 모이는 고급 기술 시설.\n"
+sm_starm_science_booster:0 "연구소"
+sm_starm_science_booster_desc:0 "눈길을 피해 고위험 실험을 수행할 수 있는 제어된 조건을 제공하는 최첨단 시설.\n"
+sm_starm_science_booster_effect:0 "과학 허브에서 £society£ £physics£ £engineering£ §Y$연구$§! 생산: §G+2§!.\n"
+sm_starm_culture_booster:0 "대사관"
+sm_starm_culture_booster_desc:0 "소규모 비밀 회의부터 대규모 공개 행사, 미술 전시회 및 외교 회의까지 모든 종류의 행사를 개최할 수 있는 웅장한 복합 시설.\n"
+sm_starm_culture_booster_effect:0 "스타베이스 모듈에서 £unity£통합 및 £society£사회 연구 생산: §G+2§!.\n"
+sm_starm_culture_hub:0 "문화 허브"
+sm_starm_culture_hub_desc:0 "창의적인 사고력을 가진 사람들이 문화와 예술을 촉진하기 위해 모이는 멋진 시설.\n"
+sm_art_college_effect:0 "문화 허브에서 £unity£10 통합 및 £society£10 사회 연구 생산: §G+2§!.\n"
+sm_curator_think_tank_effect:0 "과학 허브에서의 사회, 공학 및 물리학 연구 : §G+2§!.\n"
+sm_Governmental_Orbital_Exchange_Market: "궤도 교환 시장"
+sm_administrative_hub:0 "$building_low_tech_admin_hub$ Orbital"
+sm_Governmental_diplomatic_asset:0 "외교 대사관"
