--- a/localisation/polish/phi_l_polish.yml
+++ b/localisation/polish/phi_l_polish.yml
@@ -1089,3 +1089,35 @@ councilor_corporate_dominion_2_desc:0 "$councilor_corporate_dominion_desc$"
 councilor_franchise_state:0 "franchises ruler"
 councilor_franchise_state_female:0 "franchises ruler"
 councilor_franchise_state_desc:0 "franchises ruler talk with other franchise"
+
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE_TITLE:0 "Można badać drobne artefakty!"
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE:0 "Drobne artefakty można badać, aby uzyskać wgląd w bramę L!"
+
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE_TITLE:0 "Można badać drobne artefakty!"
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE:0 "Drobne artefakty można badać, aby uzyskać wgląd w Przodków!"
+
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_TITLE:0 "Imperium próbuje przetrwać"
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_ALERT_MESSAGE:0 "Imperium $EMPIRE|Y$ próbuje przetrwać w nierównej wojnie. Czy mógłbyś pomóc mu poprzez §Ypoprawę stosunków§! i kliknięcie edyktu §Y$edict_phi_join_defensive_war$§!"
+
+sm_nebula_alloy_refinery:0 "Rafineria stopów"
+sm_nebula_alloy_refinery_desc:0 "Hightechowa rafineria stopów przy 0 grawitacji"
+sm_civilian_anchorage:0 "Kotwica cywilna"
+sm_civilian_anchorage_desc:0 "Kotwice cywilne, znane również jako porty kosmiczne."
+sm_civilian_shipyard:0 "Stocznia cywilna"
+sm_civilian_shipyard_desc:0 "Produkuje statki handlowe na sprzedaż energii dla populacji Void Dwellers. Im więcej stoczni cywilnych, tym mniej energii jest produkowane. Potrzebne są 0,5 stoczni, aby zbudować statek cywilny, a 2 stocznie, aby zbudować statek wojskowy."
+
+sm_starm_science_hub:0 "Centrum badawcze"
+sm_starm_science_hub_desc:0 "Wysokotechnologiczna placówka, w której nasi naukowcy spotykają się, aby posuwać do przodu różne dziedziny badań.\n"
+sm_starm_science_booster:0 "Laboratoria"
+sm_starm_science_booster_desc:0 "Najnowocześniejsze obiekty, które zapewniają kontrolowane warunki, w których wykonywane są wysokie ryzyko eksperymenty z dala od ciekawskich spojrzeń.\n"
+sm_starm_science_booster_effect:0 "Produkcja badań £society£ £physics£ £engineering£ §Y$BADAŃ$§! z Centrów Naukowych: §G+2§!.\n"
+sm_starm_culture_booster:0 "Ambasada"
+sm_starm_culture_booster_desc:0 "Majestatyczny kompleks, który może pomieścić od małych, tajnych spotkań po duże, publiczne wydarzenia, wystawy sztuki i konferencje dyplomatyczne.\n"
+sm_starm_culture_booster_effect:0 "Produkcja badań £unity£Jedność i £society£Społeczeństwo z Modułów Bazy Gwiazdowej: §G+2§!.\n"
+sm_starm_culture_hub:0 "Centrum kultury"
+sm_starm_culture_hub_desc:0 "Wspaniała placówka, w której nasi najbardziej kreatywni ludzie spotykają się, aby promować kulturę i sztukę.\n"
+sm_art_college_effect:0 "Produkcja badań £unity£10 Jedność i £society£10 Społeczeństwo z Centrów Kultury: §G+2§!.\n"
+sm_curator_think_tank_effect:0 "Badania społeczne, inżynieria i fizyka z Centrów Naukowych: §G+2§!.\n"
+sm_Governmental_Orbital_Exchange_Market: "Orbitalny Rynek Wymiany"
+sm_administrative_hub:0 "$building_low_tech_admin_hub$ Orbital"
+sm_Governmental_diplomatic_asset:0 "Ambasada dyplomatyczna"
