--- a/localisation/simp_chinese/phi_l_simp_chinese.yml
+++ b/localisation/simp_chinese/phi_l_simp_chinese.yml
@@ -1087,3 +1087,35 @@ councilor_corporate_dominion_2_desc:0 "$councilor_corporate_dominion_desc$"
 councilor_franchise_state:0 "franchises ruler"
 councilor_franchise_state_female:0 "franchises ruler"
 councilor_franchise_state_desc:0 "franchises ruler talk with other franchise"
+
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE_TITLE:0 "可以研究小型神器！"
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE:0 "可以研究小型神器以获取L-门洞察！"
+
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE_TITLE:0 "可以研究小型神器！"
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE:0 "可以研究小型神器以获取先驱者洞察！"
+
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_TITLE:0 "帝国试图生存"
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_ALERT_MESSAGE:0 "一个帝国$EMPIRE|Y$正在试图在不平等的战争中生存，你能通过§Y改善关系§!并点击法令§Y$edict_phi_join_defensive_war$§来帮助它吗！"
+
+sm_nebula_alloy_refinery:0 "合金精炼厂"
+sm_nebula_alloy_refinery_desc:0 "零重力下的高科技合金精炼厂"
+sm_civilian_anchorage:0 "民用锚地"
+sm_civilian_anchorage_desc:0 "民用锚地，也称为空间港口。"
+sm_civilian_shipyard:0 "民用造船厂"
+sm_civilian_shipyard_desc:0 "为虚空居民的人口生产能源销售船。民用造船厂越多，产生的能源越少。建造民用船需要0.5个造船厂，而建造军舰则需要2个造船厂。"
+
+sm_starm_science_hub:0 "研究中心"
+sm_starm_science_hub_desc:0 "高科技设施，我们的科学家在此会面，推进不同领域的研究。\n"
+sm_starm_science_booster:0 "实验室"
+sm_starm_science_booster_desc:0 "先进设备，提供受控条件，远离人们的好奇目光，进行高风险实验。\n"
+sm_starm_science_booster_effect:0 "从科学中心生产 £society£社会、£physics£物理、£engineering£工程 §Y$研究$§!：§G+2§!。\n"
+sm_starm_culture_booster:0 "大使馆"
+sm_starm_culture_booster_desc:0 "宏伟的综合设施，可以举办各种规模的活动，从小型秘密会议到大型公开活动、艺术展览和外交会议。\n"
+sm_starm_culture_booster_effect:0 "从星际基地模块产生 £unity£团结和 £society£社会研究：§G+2§!。\n"
+sm_starm_culture_hub:0 "文化中心"
+sm_starm_culture_hub_desc:0 "出色的设施，我们最有创意的人们在此聚集，促进文化和艺术。\n"
+sm_art_college_effect:0 "从文化中心产生 £unity£10团结和
+sm_curator_think_tank_effect:0 "从科学中心进行社会、工程和物理研究：§G+2§!。\n"
+sm_Governmental_Orbital_Exchange_Market: "轨道交易市场"
+sm_administrative_hub:0 "$building_low_tech_admin_hub$ Orbital"
+sm_Governmental_diplomatic_asset:0 "外交大使馆"
