--- a/localisation/spanish/phi_l_spanish.yml
+++ b/localisation/spanish/phi_l_spanish.yml
@@ -1076,3 +1076,36 @@ councilor_corporate_dominion_2_desc:0 "$councilor_corporate_dominion_desc$"
 councilor_franchise_state:0 "franchises ruler"
 councilor_franchise_state_female:0 "franchises ruler"
 councilor_franchise_state_desc:0 "franchises ruler talk with other franchise"
+
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE_TITLE:0 "¡Se pueden estudiar Artefactos Menores!"
+MINOR_ARTIFACT_LGATE_ALERT_MESSAGE:0 "¡Se pueden estudiar Artefactos Menores para obtener una Visión de la Puerta-L!"
+
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE_TITLE:0 "¡Se pueden estudiar Artefactos Menores!"
+MINOR_ARTIFACT_PRECURSOR_ALERT_MESSAGE:0 "¡Se pueden estudiar Artefactos Menores para obtener una Visión de los Precursores!"
+
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_TITLE:0 "Un imperio intenta sobrevivir"
+PHI_EMPIRE_IN_SURVIVE_AVAIBLE_ALERT_MESSAGE:0 "Un imperio $EMPIRE|Y$ está intentando sobrevivir en una guerra desigual. ¿Podrías ayudarlo mejorando la §Yrelación§! y haciendo clic en el edicto §Y$edict_phi_join_defensive_war$§?"
+
+sm_nebula_alloy_refinery:0 "Refinería de aleaciones"
+sm_nebula_alloy_refinery_desc:0 "Refinería de aleaciones de alta tecnología en gravedad 0"
+sm_civilian_anchorage:0 "Anclaje civil"
+sm_civilian_anchorage_desc:0 "Anclajes civiles, también conocidos como puertos espaciales."
+sm_civilian_shipyard:0 "Astillero civil"
+sm_civilian_shipyard_desc:0 "Produce naves de venta de energía para las poblaciones habitantes del vacío. Cuantos más astilleros civiles, menos energía se produce. Se necesita 0,5 astilleros para construir una nave civil y 2 astilleros para construir una nave militar."
+
+sm_starm_science_hub:0 "Centro de investigación"
+sm_starm_science_hub_desc:0 "Instalación de alta tecnología en la que nuestros científicos se reúnen para avanzar en diferentes áreas de investigación.\n"
+sm_starm_science_booster:0 "Laboratorio"
+sm_starm_science_booster_desc:0 "Instalaciones de última generación que ofrecen condiciones controladas para llevar a cabo experimentos de alto riesgo alejados de miradas indiscretas.\n"
+sm_starm_science_booster_effect:0 "Producción de investigación £society£Sociedad, £physics£Física y £engineering£Ingeniería desde los Centros de Ciencia: §G+2§!.\n"
+sm_starm_culture_booster:0 "Embajada"
+sm_starm_culture_booster_desc:0 "Complejo majestuoso que puede albergar eventos de diferentes tamaños, desde pequeñas reuniones secretas hasta grandes eventos públicos, exposiciones de arte y conferencias diplomáticas.\n"
+sm_starm_culture_booster_effect:0 "Producción de investigación £unity£Unidad y £society£Sociedad desde los Módulos de la Base Estelar: §G+2§!.\n"
+sm_starm_culture_hub:0 "Centro cultural"
+sm_starm_culture_hub_desc:0 "Excelente instalación en la que nuestros más creativos se reúnen para promover la cultura y el arte.\n"
+sm_art_college_effect:0 "Producción de investigación £unity£10 Unidad y £society£10 Sociedad desde los Centros de Cultura: §G+2§!.\n"
+
+sm_curator_think_tank_effect:0 "Investigación de £society£5 £engineering£5 £physics£5. Investigación en sociedad, ingeniería y física en los Centros de Ciencia: §G+2§!.\n"
+sm_Governmental_Orbital_Exchange_Market: "Mercado de Intercambio Orbital"
+sm_administrative_hub:0 "$building_low_tech_admin_hub$ Orbital"
+sm_Governmental_diplomatic_asset:0 "Embajada Diplomática"
