--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -1107,7 +1107,7 @@ sm_nebula_alloy_refinery_desc:0 "High tech alloy refinery at 0 gravity"
 sm_civilian_anchorage:0 "Civil anchorage"
 sm_civilian_anchorage_desc:0 "Civil anchorages, also known as spatial ports."
 sm_civilian_shipyard:0 "Civil shypiard"
-sm_civilian_shipyard_desc:0 "Produces energy sell ship at pop void dweller for everyone more civilian shipyard less energy, has 0.5 ship build need 2 shipyard for buil governement ship."
+sm_civilian_shipyard_desc:0 "Produces energy sell ship at pop void dweller for everyone more civilian shipyard less energy, has 0.5 ship build need 2 shipyard for buil military ship."
 
  sm_starm_science_hub:0 "Research Hub"
  sm_starm_science_hub_desc:0 "A high-tech facility where our scientists meet to advance diverse fields of research.\n"
@@ -1122,7 +1122,6 @@ sm_civilian_shipyard_desc:0 "Produces energy sell ship at pop void dweller for e
  sm_art_college_effect:0 "£unity£10 £society£10. Unity & society research from Cultural Hubs: §G+2§!.\n"
 
  sm_curator_think_tank_effect:0 "£society£5 £engineering£5 £physics£5. Society, engineering & physics research from Science Hubs: §G+2§!.\n"
-
  sm_Governmental_Orbital_Exchange_Market: "Orbital Exchange Market"
  sm_administrative_hub:0 "Orbital $building_low_tech_admin_hub$"
  sm_Governmental_diplomatic_asset:0 "Diplomatic Embassy"
