--- a/localisation/replace/phi_replace_l_korean.yml
+++ b/localisation/replace/phi_replace_l_korean.yml
@@ -174,3 +174,9 @@ war_goal_wg_conquest_desc:1 "War is waged to seize Claimed enemy systems. Using 
 origin_tooltip_imperial_vassal_effects:1 "§G- WARNING: Easy Origin for new players.§!\n- Start as the vassal of an §HAdvanced AI Empire§!.\n- Gain the option to choose a §HSpecialist Empire§! vassal type at the start of the game."
 
 void_dweller_trait_tooltip:0 £인공적인 세상에서 인구의 행복: §R-30%§! \ n 인구 지배자와 전문가 사용이 §G더 적게§!되고 §Y제국§!의 크기와 인구의 주거가 §!
+
+sm_curator_think_tank:0 "관리자 싱크 탱크"
+sm_curator_think_tank_desc:0 "관리자들과 학습 및 협력에 집중한 연구 시설을 구축함으로써 우리는 과학적 진보에 중요한 기여를 할 수 있습니다.\n"
+sm_art_college:0 "미술 대학"
+sm_art_college_desc:1 "이 제로 중력 미술 대학은 근처의 장인 군영과 함께 운영되며, 재능 있는 학생들이 제작한 작품에서 우주의 아름다움을 축하합니다.\n"
+sm_naval_logistics_office_desc_modifier:2 "닻고리 및 민간 닻고리 : §G+2§! §Y해군 용량§!"
